update the .gitignore for android studio

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ proguard/
 
 # Log Files
 *.log
+
+# Android Studio / IntelliJ IDEA 
+*.iws
+.idea/libraries
+.idea/tasks.xml
+.idea/vcs.xml
+.idea/workspace.xml
